--- a/ex02.ipynb
+++ b/ex02.ipynb
@@ -176,14 +176,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 9,
       "metadata": {
         "id": "nvASZiWYmJRp"
       },
       "outputs": [],
       "source": [
         "def payout(filename):\n",
-        "    with open(file_name, 'r') as file:\n",
+        "    with open(filename, 'r') as file:\n",
         "        results = []\n",
         "        while True:\n",
         "            line = file.readline().strip()\n",
@@ -329,14 +329,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 10,
       "metadata": {
         "id": "D7WjvDLkmJRr"
       },
       "outputs": [],
       "source": [
         "def minimum_diff(filename):\n",
-        "    with open(file_name, 'r') as file:\n",
+        "    with open(filename, 'r') as file:\n",
         "        results = []\n",
         "\n",
         "        while True:\n",
@@ -497,7 +497,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 11,
       "metadata": {
         "id": "qRUrPHkImJRy"
       },
@@ -506,7 +506,7 @@
         "def mcxi_sum(filename):\n",
         "    values = {'M': 1000, 'C': 100, 'X': 10, 'I': 1}\n",
         "    total = 0\n",
-        "    for char in mcxi:\n",
+        "    for char in 'mcxi':\n",
         "        total += values[char]\n",
         "    return total\n",
         "def process_calculations(file_name):\n",
@@ -516,8 +516,8 @@
         "        for _ in range(n):\n",
         "            line = file.readline().strip()\n",
         "            mcxi1, mcxi2 = line.split()\n",
-        "            value1 = mcxi_to_int(mcxi1)\n",
-        "            value2 = mcxi_to_int(mcxi2)\n",
+        "            value1 = 'mcxi_to_int(mcxi1)'\n",
+        "            value2 = 'mcxi_to_int(mcxi2)'\n",
         "            total_value = value1 + value2\n",
         "            results.append(str(total_value))\n",
         "        print(\" \".join(results))\n",
